# area-o-meter

./: README.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: build-and-release.yml  build.yml
examples/: use.py
meter/: __init__.py  area.py  protocols.py  utils.py
meter/shapes/: __init__.py  circle.py  triangle.py
tests/: __init__.py  test_utils.py
tests/shapes/: __init__.py  test_circle.py  test_triangle.py
