[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "area-o-meter"
dynamic = ["version"]

[tool.setuptools]
packages = ["meter"]

# [tool.ruff]
# lint.select = ["E", "F", "D", "ANN"]  # E: PEP8, F: pyflakes, D: docstrings, ANN: type annotations
# lint.ignore = ["D100", "D104"]  # Optional: ignore missing docstrings for modules, etc.
# line-length = 88

# [tool.ruff.pydocstyle]
# convention = "google"