[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "area-o-meter"
dynamic = ["version"]

[tool.setuptools.packages.find]
include = ["meter*"]

# [tool.setuptools]
#packages = ["meter"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
